Add new content and style!

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Landing Page - Start Bootstrap Theme</title>
+    <title>Our Little Wedding - Meredyth &amp; Ryan</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -20,6 +20,7 @@
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Josefin+Sans" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -52,10 +53,16 @@
                         <a href="#about">About</a>
                     </li>
                     <li>
-                        <a href="#services">Services</a>
+                        <a href="#rsvp">RSVP</a>
                     </li>
                     <li>
-                        <a href="#contact">Contact</a>
+                        <a href="#plan">Plan Your Trip</a>
+                    </li>
+                    <li>
+                        <a href="#schedule">Schedule</a>
+                    </li>
+                    <li>
+                        <a href="#registry">Registry</a>
                     </li>
                 </ul>
             </div>
@@ -66,7 +73,6 @@
 
 
     <!-- Header -->
-    <a name="about"></a>
     <div class="intro-header">
         <div class="container">
 
@@ -75,7 +81,6 @@
                     <div class="intro-message">
                         <h1>Our Little Wedding</h1>
                         <h3>10.21.2017</h3>
-                        <hr class="intro-divider">
                     </div>
                 </div>
             </div>
@@ -88,99 +93,121 @@
 
     <!-- Page Content -->
 
-	<a  name="services"></a>
+  <!-- About -->
+  <a name="about"></a>
     <div class="content-section-a">
 
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Death to the Stock Photo:<br>Special Thanks</h2>
-                    <p class="lead">A special thanks to <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a> for providing the photographs that you see in this template. Visit their website to become a member.</p>
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/ipad.png" alt="">
-                </div>
-            </div>
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-5 col-sm-6">
+                  <hr class="section-heading-spacer">
+                  <div class="clearfix"></div>
+                  <h2 class="section-heading">The Wedding</h2>
+                  <p class="lead">Saturday, October 21, 2017<br>Time: TBD<br>Attire: TBD</p>
+                  <h2 class="section-heading">Ceremony + Reception</h2>
+                  <p class="lead">Lenox Library<br>18 Main St<br>Lenox, MA 01240</p>
+              </div>
+              <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                  <!-- 900 x 696 image preferred -->
+                  <img width="400" src="https://api.mapbox.com/v4/mapbox.emerald/pin-s-heart+285A98(-73.284431,42.357363)/-73.284431,42.357363,14/400x310@2x.png?access_token=pk.eyJ1IjoibWFwdGFzdGlrIiwiYSI6IjNPMkREV1kifQ.2KGPFZD0QaGfvYzXYotTXQ" alt="Mapbox Map of -73.284431,42.357363"><br>
+© <a href='https://www.mapbox.com/map-feedback/'>Mapbox</a> © <a href='http://www.openstreetmap.org/copyright'>OpenStreetMap contributors</a>
+              </div>
+          </div>
 
-        </div>
-        <!-- /.container -->
+      </div>
+      <!-- /.container -->
 
     </div>
-    <!-- /.content-section-a -->
 
+  <!-- RSVP -->
+	<a  name="rsvp"></a>
     <div class="content-section-b">
 
         <div class="container">
-
             <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">3D Device Mockups<br>by PSDCovers</h2>
-                    <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
+                <div class="col-lg-6 col-sm-6">
+                    <!-- 900 x 696 image preferred -->
+                    <img class="img-responsive" src="img/bench1.jpg" alt="">
                 </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/dog.png" alt="">
+                <div class="col-lg-6 col-sm-6">
+                  <hr class="section-heading-spacer">
+                  <div class="clearfix"></div>
+                  <h2 class="section-heading">RSVP</h2>
+                  <p class="lead">For our wedding we will be using an online service to handle RSVPs. We will add a link to that service after invitations go out.</p>
                 </div>
             </div>
-
         </div>
         <!-- /.container -->
-
     </div>
-    <!-- /.content-section-b -->
 
+    <!-- Plan Your Trip -->
+    <a  name="plan"></a>
+      <div class="content-section-a">
+
+          <div class="container">
+              <div class="row">
+                  <div class="col-lg-6 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Plan Your Trip</h2>
+                    <p class="lead">The Berkshires, while beautiful, are not necessarily the easiest place to access. As such, we've provided some resources that might be helpful to ensure that your trip is as pain-free and enjoyable as possible.</p>
+                  </div>
+                  <div class="col-lg-6 col-sm-6">
+                    <!-- 900 x 696 image preferred -->
+                    <img class="img-responsive" src="img/travel1.jpg" alt="">
+                  </div>
+              </div>
+          </div>
+          <!-- /.container -->
+      </div>
+
+      <!-- Schedule -->
+      <a  name="schedule"></a>
+        <div class="content-section-b">
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 col-sm-6">
+                        <!-- 900 x 696 image preferred -->
+                        <img class="img-responsive" src="img/schedule1.jpg" alt="">
+                    </div>
+                    <div class="col-lg-6 col-sm-6">
+                      <hr class="section-heading-spacer">
+                      <div class="clearfix"></div>
+                      <h2 class="section-heading">Schedule</h2>
+                      <p class="lead">Expectations are a thing. While we don't yet have a finalized general schedule for the day, we will be sure to post one when we have one.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- /.container -->
+        </div>
+
+  <!-- Registry -->
+  <a name="registry"></a>
     <div class="content-section-a">
 
         <div class="container">
-
             <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
-                    <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
+                <div class="col-lg-6 col-sm-6">
+                  <hr class="section-heading-spacer">
+                  <div class="clearfix"></div>
+                  <h2 class="section-heading">Registry</h2>
+                  <p class="lead">If you are interested in giving us gifts, we will have a registry of some sort to offer up some ideas. Stay tuned!</p>
                 </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/phones.png" alt="">
+                <div class="col-lg-6 col-sm-6">
+                  <!-- 900 x 696 image preferred -->
+                  <img class="img-responsive" src="img/registry1.jpg" alt="">
                 </div>
             </div>
 
         </div>
         <!-- /.container -->
-
     </div>
-    <!-- /.content-section-a -->
 
-	<a  name="contact"></a>
+    <!-- Bottom Banner -->
     <div class="banner">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-6">
-                    <h2>Connect to Start Bootstrap:</h2>
-                </div>
-                <div class="col-lg-6">
-                    <ul class="list-inline banner-social-buttons">
-                        <li>
-                            <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                        </li>
-                        <li>
-                            <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-
-        </div>
+        <div class="container"></div>
         <!-- /.container -->
-
     </div>
     <!-- /.banner -->
 
@@ -199,14 +226,22 @@
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#services">Services</a>
+                            <a href="#rsvp">RSVP</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#contact">Contact</a>
+                            <a href="#plan">Plan Your Trip</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="#schedule">Schedule</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="#registry">Registry</a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Your Company 2014. All Rights Reserved</p>
+                    <p class="copyright text-muted small">Copyright &copy; Our Little Wedding 2017. All Rights Reserved</p>
                 </div>
             </div>
         </div>
