add names to heading

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>Our Little Wedding</h1>
-                        <h3>10.21.2017</h3>
+                        <h3>Ryan Cooper + Meredyth Pederson</h3>
+                        <!-- <h3>10.21.2017</h3> -->
                     </div>
                 </div>
             </div>
