Update travel section

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               </div>
               <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                   <!-- 900 x 696 image preferred -->
-                  <img width="400" src="https://api.mapbox.com/v4/mapbox.emerald/pin-s-heart+285A98(-73.284431,42.357363)/-73.284431,42.357363,14/400x310@2x.png?access_token=pk.eyJ1IjoibWFwdGFzdGlrIiwiYSI6IjNPMkREV1kifQ.2KGPFZD0QaGfvYzXYotTXQ" alt="Mapbox Map of -73.284431,42.357363"><br>
+                  <img class="img-responsive" width="400" src="https://api.mapbox.com/v4/mapbox.emerald/pin-s-heart+285A98(-73.284431,42.357363)/-73.284431,42.357363,14/400x310@2x.png?access_token=pk.eyJ1IjoibWFwdGFzdGlrIiwiYSI6IjNPMkREV1kifQ.2KGPFZD0QaGfvYzXYotTXQ" alt="Mapbox Map of -73.284431,42.357363"><br>
 © <a href='https://www.mapbox.com/map-feedback/'>Mapbox</a> © <a href='http://www.openstreetmap.org/copyright'>OpenStreetMap contributors</a>
               </div>
           </div>
@@ -152,10 +152,26 @@
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Plan Your Trip</h2>
                     <p class="lead">The Berkshires, while beautiful, are not necessarily the easiest place to access. As such, we've provided some resources that might be helpful to ensure that your trip is as pain-free and enjoyable as possible.</p>
+                    <h3>Travel</h3>
+                    <h4>Fly</h4>
+                      <a class="btn btn-link" href="http://www.bradleyairport.com/" role="button" target="_blank">Bradley International (BDL) - Hartford, CT</a>
+                      <a class="btn btn-link" href="http://www.albanyairport.com/" role="button" target="_blank">Albany International (ALB) - Albany, NY</a>
+                    <h4>Planes, Trains &amp; Automobiles</h4>
+                    <p class="lead">While Hartford and Albany are the closest airports to Lenox, we encourage you to take advantage of the multi-modal transportation options afforded by the dense, pre-sprawl urban development of the Northeast. You may be able to find sigificantly cheaper flights to one of New York City's airports. From there, <a href="https://www.amtrak.com/home" target="_blank">Amtrak</a> offers regular service to Hartford and Springfield, MA.</p>
+                    <h3>Lodging</h3>
+                    <p class="lead">The Berkshires offer a host of lodging options including a variety of hotels, motels, home shares, and B&amp;Bs. No matter your lodging needs, we're confident you'll find a satisfactory roof to shelter you during your trip.</p>
+                    <h4>Hampton Inn &amp; Suites</h4>
+                    <p class="lead">We have reserved a block of rooms at the Hampton Inn &amp; Suites in Lenox. If you would like to receive the reduced block rate, make your reservation by September 15th.</p>
+                    <a class="btn btn-default" href="http://hamptoninn.hilton.com/en/hp/groups/personalized/S/SFYLXHX-CPW-20171020/index.jhtml?WT.mc_id=POG" target="_blank">Reserve a Room</a>
+                    <h4>Homeshares</h4>
+                    <a class="btn btn-link" href="https://www.airbnb.com/s/Lenox--MA--United-States/homes?checkin=2017-10-20&checkout=2017-10-22&place_id=ChIJJ-N62itF54kRENz3dx2yY0g&allow_override%5B%5D=&s_tag=xgJoiSXF" target="_blank">Airbnb</a>
+                    <br>
+                    <a class="btn btn-link" href="https://www.homeaway.com/results/massachusetts/lenox/region:5676/keywords:Lenox%2C+MA%2C+USA/arrival:2017-10-20/departure:2017-10-22" target="_blank">Homeaway</a>
                   </div>
                   <div class="col-lg-6 col-sm-6">
                     <!-- 900 x 696 image preferred -->
                     <img class="img-responsive" src="img/travel1.jpg" alt="">
+                    <!-- <img class="img-responsive" src="img/travel1.jpg" alt=""> -->
                   </div>
               </div>
           </div>
