updated RSVP section, added contact info

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                     <li>
                         <a href="#registry">Registry</a>
                     </li>
+                    <li>
+                        <a href="mailto:pedersoncooper1021@gmail.com">Contact</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -104,7 +107,7 @@
                   <hr class="section-heading-spacer">
                   <div class="clearfix"></div>
                   <h2 class="section-heading">The Wedding</h2>
-                  <p class="lead">Saturday, October 21, 2017<br>Time: TBD<br>Attire: TBD</p>
+                  <p class="lead">Saturday, October 21, 2017<br>Time: 4:00PM<br>Attire: Semi-Formal</p>
                   <h2 class="section-heading">Ceremony + Reception</h2>
                   <p class="lead">Lenox Library<br>18 Main St<br>Lenox, MA 01240</p>
               </div>
@@ -121,20 +124,22 @@
     </div>
 
   <!-- RSVP -->
-	<a  name="rsvp"></a>
+	<a name="rsvp"></a>
     <div class="content-section-b">
 
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-sm-6">
                     <!-- 900 x 696 image preferred -->
-                    <img class="img-responsive" src="img/bench1.jpg" alt="">
+                    <img class="img-responsive" src="img/leaf1.jpg" alt="">
                 </div>
                 <div class="col-lg-6 col-sm-6">
                   <hr class="section-heading-spacer">
                   <div class="clearfix"></div>
                   <h2 class="section-heading">RSVP</h2>
-                  <p class="lead">For our wedding we will be using an online service to handle RSVPs. We will add a link to that service after invitations go out.</p>
+                  <p class="lead">We want to make sure there are enough seats and enough food for everyone to burn off on the dance floor. Whether you'll be able to join us or not, please let us know!</p>
+                  <a class="btn btn-default" href="http://ourlittlewedding.anrsvp.com/" target="_blank">Click to RSVP*</a>
+                  <p class="lead">* <small>Upon clicking the button above, you will be redirected to third-party site, <a href="http://ourlittlewedding.anrsvp.com/" target="_blank">anrsvp.com</a>. We are using their service to help compile and manage all the RSVPs.</small></p>
                 </div>
             </div>
         </div>
@@ -257,8 +262,11 @@
                         <li>
                             <a href="#registry">Registry</a>
                         </li>
+                        <li>
+                            <a href="mailto:pedersoncooper1021@gmail.com">Contact</a>
+                        </li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Our Little Wedding 2017. All Rights Reserved</p>
+                    <p class="copyright text-muted small">Copyright &copy; Our Little Wedding 2017. All Rights Reserved | Questions? <a href="mailto:pedersoncooper1021@gmail.com">Email Us</a></p>
                 </div>
             </div>
         </div>
