added registry info

--- a/index.html
+++ b/index.html
@@ -214,7 +214,11 @@
                   <hr class="section-heading-spacer">
                   <div class="clearfix"></div>
                   <h2 class="section-heading">Registry</h2>
-                  <p class="lead">If you are interested in giving us gifts, we will have a registry of some sort to offer up some ideas. Stay tuned!</p>
+                  <p class="lead">There is, we've been told, a tradition of giving the newlyweds gifts. While your presence is certainly gift enough, if you are interested in participating in this tradition, we would like to offer a couple of suggestions for you to make doing so as simple as possible:</p>
+                  <ol>
+                    <li><b>Honeymoon Fund:</b> We are shooting for a 2018 trip to Europe as a honeymoon adventure. If you would like to make a monetary contribution to that journey, we would gladly accept it.</li>
+                    <li><b>Bed, Bath &amp; Beyond:</b> We are registered for various household goods that can be found at your local "Triple-B" location. You can view our registry <a href="https://www.bedbathandbeyond.com:443/store/giftregistry/view_registry_guest.jsp?registryId=543964483&eventType=Wedding&pwsurl=" target="_blank">here</a>.</li>
+                  </ol>
                 </div>
                 <div class="col-lg-6 col-sm-6">
                   <!-- 900 x 696 image preferred -->
