--- a/index.html
+++ b/index.html
@@ -197,7 +197,26 @@
                       <hr class="section-heading-spacer">
                       <div class="clearfix"></div>
                       <h2 class="section-heading">Schedule</h2>
-                      <p class="lead">Expectations are a thing. While we don't yet have a finalized general schedule for the day, we will be sure to post one when we have one.</p>
+                      <!-- <p class="lead">Expectations are a thing. While we don't yet have a finalized general schedule for the day, we will be sure to post one when we have one.</p> -->
+                      <h3>Friday, October 20th</h3>
+                      <h4>Welcome Gathering</h4>
+                      <ul>
+                          <li>Location: TBD</li>
+                          <li>Time: 8:30pm</li>
+                      </ul>
+                      <h3>Saturday, October 21st</h3>
+                      <h4>The Wedding!</h4>
+                      <ul>
+                          <li>Location: The Lenox Library (<a href="https://www.google.com/maps/place/Lenox+Town+Library/@42.3573553,-73.2866151,17z/data=!3m1!4b1!4m5!3m4!1s0x89e75b2e43988657:0x7d1459f51865855a!8m2!3d42.3573553!4d-73.2844211" target="_blank">map</a>)</li>
+                          <li>Time: 4:00pm</li>
+                          <li>Followed by cocktail hour, dinner, and dancing!</li>
+                      </ul>
+                      <h3>Sunday, October 22nd</h3>
+                      <h4>Send-Off Brunch</h4>
+                      <ul>
+                          <li>Location: Pederson House, 12 Sunset Ave (<a href="https://www.google.com/maps/place/12+Sunset+Ave,+Lenox,+MA+01240/@42.3586709,-73.2878349,17z/data=!3m1!4b1!4m5!3m4!1s0x89e75b2f016ba299:0xf2b70af5739c9fa0!8m2!3d42.358629!4d-73.285628" target="_blank">map</a>)</li>
+                          <li>Time: Drop in anytime between 9:30am and noon</li>
+                      </ul>
                     </div>
                 </div>
             </div>
