--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                   <h2 class="section-heading">Ceremony + Reception</h2>
                   <p class="lead">Lenox Library<br>18 Main St<br>Lenox, MA 01240</p>
               </div>
-              <div class="col-lg-5 col-lg-offset-2 col-sm-6 embed-responsive embed-responsive-16by9">
+              <div class="col-lg-5 col-lg-offset-2 col-sm-6 embed-responsive map-embed-container">
                       <iframe lass="embed-responsive-item" src="./map.html" frameborder="0"></iframe>
                   <!-- 900 x 696 image preferred -->
                   <!-- <img class="img-responsive" width="400" src="https://api.mapbox.com/v4/mapbox.emerald/pin-s-heart+285A98(-73.284431,42.357363)/-73.284431,42.357363,14/400x310@2x.png?access_token=pk.eyJ1IjoibWFwdGFzdGlrIiwiYSI6IjNPMkREV1kifQ.2KGPFZD0QaGfvYzXYotTXQ" alt="Mapbox Map of -73.284431,42.357363"><br>
